--- a/Remodeling/style.css
+++ b/Remodeling/style.css
@@ -1,3 +1,7 @@
+/*
+Theme Name: 空間X
+*/
+
 /*! destyle.css v2.0.2 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 
 /* Reset box-model and set borders */
